--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -564,10 +564,11 @@
     "downloadSample": "Download Sample",
     "formatGuide": "Format Guide",
     "exportCredentialWarning": "Warning: Host \"{{name}}\" uses credential authentication. The exported file will not include the credential data and will need to be manually reconfigured after import. Do you want to continue?",
-    "exportSensitiveDataWarning": "Warning: Host \"{{name}}\" contains sensitive authentication data (password/SSH key). The exported file will not include this data for security reasons. You'll need to reconfigure authentication after import. Do you want to continue?",
+    "exportSensitiveDataWarning": "Warning: Host \"{{name}}\" contains sensitive authentication data (password/SSH key). The exported file will include this data in plaintext. Please keep the file secure and delete it after use. Do you want to continue?",
     "uncategorized": "Uncategorized",
     "confirmDelete": "Are you sure you want to delete \"{{name}}\" ?",
     "failedToDeleteHost": "Failed to delete host",
+    "failedToExportHost": "Failed to export host. Please ensure you're logged in and have access to the host data.",
     "jsonMustContainHosts": "JSON must contain a \"hosts\" array or be an array of hosts",
     "noHostsInJson": "No hosts found in JSON file",
     "maxHostsAllowed": "Maximum 100 hosts allowed per import",
@@ -978,7 +979,16 @@
     "move": "Move",
     "searchInFile": "Search in file (Ctrl+F)",
     "showKeyboardShortcuts": "Show keyboard shortcuts",
-    "startWritingMarkdown": "Start writing your markdown content..."
+    "startWritingMarkdown": "Start writing your markdown content...",
+    "loadingFileComparison": "Loading file comparison...",
+    "reload": "Reload",
+    "compare": "Compare",
+    "sideBySide": "Side by Side",
+    "inline": "Inline",
+    "fileComparison": "File Comparison: {{file1}} vs {{file2}}",
+    "fileTooLarge": "File too large: {{error}}",
+    "sshConnectionFailed": "SSH connection failed. Please check your connection to {{name}} ({{ip}}:{{port}})",
+    "loadFileFailed": "Failed to load file: {{error}}"
   },
   "tunnels": {
     "title": "SSH Tunnels",
