--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -548,10 +548,11 @@
     "downloadSample": "下载示例",
     "formatGuide": "格式指南",
     "exportCredentialWarning": "警告：主机 \"{{name}}\" 使用凭据认证。导出的文件将不包含凭据数据，导入后需要手动重新配置。您确定要继续吗？",
-    "exportSensitiveDataWarning": "警告：主机 \"{{name}}\" 包含敏感认证数据（密码/SSH密钥）。出于安全考虑，导出的文件将不包含此数据。导入后您需要重新配置认证。您确定要继续吗？",
+    "exportSensitiveDataWarning": "警告：主机 \"{{name}}\" 包含敏感认证数据（密码/SSH密钥）。导出的文件将以明文形式包含这些数据。请妥善保管文件，使用后建议删除。您确定要继续吗？",
     "uncategorized": "未分类",
     "confirmDelete": "确定要删除 \"{{name}}\" 吗？",
     "failedToDeleteHost": "删除主机失败",
+    "failedToExportHost": "导出主机失败。请确保您已登录并有权访问主机数据。",
     "jsonMustContainHosts": "JSON 必须包含 \"hosts\" 数组或是一个主机数组",
     "noHostsInJson": "JSON 文件中未找到主机",
     "maxHostsAllowed": "每次导入最多允许 100 个主机",
@@ -969,7 +970,16 @@
     "move": "移动",
     "searchInFile": "在文件中搜索 (Ctrl+F)",
     "showKeyboardShortcuts": "显示键盘快捷键",
-    "startWritingMarkdown": "开始编写您的 markdown 内容..."
+    "startWritingMarkdown": "开始编写您的 markdown 内容...",
+    "loadingFileComparison": "正在加载文件对比...",
+    "reload": "重新加载",
+    "compare": "对比",
+    "sideBySide": "并排显示",
+    "inline": "内嵌显示",
+    "fileComparison": "文件对比：{{file1}} 与 {{file2}}",
+    "fileTooLarge": "文件过大：{{error}}",
+    "sshConnectionFailed": "SSH 连接失败。请检查与 {{name}} ({{ip}}:{{port}}) 的连接",
+    "loadFileFailed": "加载文件失败：{{error}}"
   },
   "tunnels": {
     "title": "SSH 隧道",
