Add support for passwordless host authentication
Allow adding SSH hosts without authentication credentials by introducing
a new "none" auth type. This enables users to configure hosts for later
use with SSH agent or manual credential addition.

Changes:
- Add authType "none" to type definitions
- Update frontend form to support "None" authentication option
- Skip credential validation for "none" auth type
- Update backend to accept hosts without credentials
- Add i18n support for English and Chinese

Fixes #278

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -639,6 +639,8 @@
     "password": "Password",
     "key": "Key",
     "credential": "Credential",
+    "none": "None",
+    "noneDescription": "No authentication credentials required. You can add credentials later or use SSH agent for authentication.",
     "selectCredential": "Select Credential",
     "selectCredentialPlaceholder": "Choose a credential...",
     "credentialRequired": "Credential is required when using credential authentication",
