--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -635,6 +635,8 @@
     "password": "密码",
     "key": "密钥",
     "credential": "凭证",
+    "none": "无",
+    "noneDescription": "无需认证凭证。您可以稍后添加凭证或使用 SSH 代理进行认证。",
     "selectCredential": "选择凭证",
     "selectCredentialPlaceholder": "选择一个凭证...",
     "credentialRequired": "使用凭证认证时需要选择凭证",
