Add TOTP/2FA authentication support for SSH connections
Implement keyboard-interactive authentication to support servers with
PAM-based two-factor authentication configured. When TOTP verification
is detected, users are prompted with an inline modal to enter their
authentication code.

Fixes #220

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -711,7 +711,11 @@
     "connectionTimeout": "Connection timeout",
     "terminalTitle": "Terminal - {{host}}",
     "terminalWithPath": "Terminal - {{host}}:{{path}}",
-    "runTitle": "Running {{command}} - {{host}}"
+    "runTitle": "Running {{command}} - {{host}}",
+    "totpRequired": "Two-Factor Authentication Required",
+    "totpPlaceholder": "000000",
+    "submit": "Submit",
+    "cancel": "Cancel"
   },
   "fileManager": {
     "title": "File Manager",
