Add terminal code snippets feature (#341)
* Add support for passwordless host authentication

Allow adding SSH hosts without authentication credentials by introducing
a new "none" auth type. This enables users to configure hosts for later
use with SSH agent or manual credential addition.

Changes:
- Add authType "none" to type definitions
- Update frontend form to support "None" authentication option
- Skip credential validation for "none" auth type
- Update backend to accept hosts without credentials
- Add i18n support for English and Chinese

Fixes #278

* Add TOTP/2FA authentication support for SSH connections

Implement keyboard-interactive authentication to support servers with
PAM-based two-factor authentication configured. When TOTP verification
is detected, users are prompted with an inline modal to enter their
authentication code.

Fixes #220

* Add terminal code snippets feature

* Fix snippets API integration and database table creation

---------

Co-authored-by: ZacharyZcR <zacharyzcr1984@gmail.com>

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -305,6 +305,8 @@
     "delete": "Delete",
     "edit": "Edit",
     "add": "Add",
+    "create": "Create",
+    "update": "Update",
     "search": "Search",
     "loading": "Loading...",
     "error": "Error",
@@ -639,6 +641,8 @@
     "password": "Password",
     "key": "Key",
     "credential": "Credential",
+    "none": "None",
+    "noneDescription": "No authentication credentials required. You can add credentials later or use SSH agent for authentication.",
     "selectCredential": "Select Credential",
     "selectCredentialPlaceholder": "Choose a credential...",
     "credentialRequired": "Credential is required when using credential authentication",
@@ -709,7 +713,40 @@
     "connectionTimeout": "Connection timeout",
     "terminalTitle": "Terminal - {{host}}",
     "terminalWithPath": "Terminal - {{host}}:{{path}}",
-    "runTitle": "Running {{command}} - {{host}}"
+    "runTitle": "Running {{command}} - {{host}}",
+    "totpRequired": "Two-Factor Authentication Required",
+    "totpPlaceholder": "000000",
+    "submit": "Submit",
+    "cancel": "Cancel"
+  },
+  "snippets": {
+    "title": "Snippets",
+    "new": "New",
+    "create": "Create Snippet",
+    "edit": "Edit Snippet",
+    "run": "Run",
+    "empty": "No snippets yet",
+    "emptyHint": "Create a snippet to save commonly used commands",
+    "name": "Name",
+    "description": "Description",
+    "content": "Command",
+    "namePlaceholder": "e.g., Restart Nginx",
+    "descriptionPlaceholder": "Optional description",
+    "contentPlaceholder": "e.g., sudo systemctl restart nginx",
+    "nameRequired": "Name is required",
+    "contentRequired": "Command is required",
+    "createDescription": "Create a new command snippet for quick execution",
+    "editDescription": "Edit this command snippet",
+    "deleteConfirmTitle": "Delete Snippet",
+    "deleteConfirmDescription": "Are you sure you want to delete \"{{name}}\"?",
+    "createSuccess": "Snippet created successfully",
+    "updateSuccess": "Snippet updated successfully",
+    "deleteSuccess": "Snippet deleted successfully",
+    "createFailed": "Failed to create snippet",
+    "updateFailed": "Failed to update snippet",
+    "deleteFailed": "Failed to delete snippet",
+    "failedToFetch": "Failed to fetch snippets",
+    "executeSuccess": "Executing: {{name}}"
   },
   "fileManager": {
     "title": "File Manager",
