--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -298,6 +298,8 @@
     "delete": "删除",
     "edit": "编辑",
     "add": "添加",
+    "create": "创建",
+    "update": "更新",
     "search": "搜索",
     "confirm": "确认",
     "yes": "是",
@@ -635,6 +637,8 @@
     "password": "密码",
     "key": "密钥",
     "credential": "凭证",
+    "none": "无",
+    "noneDescription": "无需认证凭证。您可以稍后添加凭证或使用 SSH 代理进行认证。",
     "selectCredential": "选择凭证",
     "selectCredentialPlaceholder": "选择一个凭证...",
     "credentialRequired": "使用凭证认证时需要选择凭证",
@@ -730,7 +734,40 @@
     "reconnecting": "重新连接中... ({{attempt}}/{{max}})",
     "reconnected": "重新连接成功",
     "maxReconnectAttemptsReached": "已达到最大重连尝试次数",
-    "connectionTimeout": "连接超时"
+    "connectionTimeout": "连接超时",
+    "totpRequired": "需要双因素认证",
+    "totpPlaceholder": "000000",
+    "submit": "提交",
+    "cancel": "取消"
+  },
+  "snippets": {
+    "title": "代码片段",
+    "new": "新建",
+    "create": "创建代码片段",
+    "edit": "编辑代码片段",
+    "run": "运行",
+    "empty": "暂无代码片段",
+    "emptyHint": "创建代码片段以保存常用命令",
+    "name": "名称",
+    "description": "描述",
+    "content": "命令",
+    "namePlaceholder": "例如: 重启 Nginx",
+    "descriptionPlaceholder": "可选描述",
+    "contentPlaceholder": "例如: sudo systemctl restart nginx",
+    "nameRequired": "名称不能为空",
+    "contentRequired": "命令不能为空",
+    "createDescription": "创建新的命令片段以便快速执行",
+    "editDescription": "编辑此命令片段",
+    "deleteConfirmTitle": "删除代码片段",
+    "deleteConfirmDescription": "确定要删除 \"{{name}}\" 吗？",
+    "createSuccess": "代码片段创建成功",
+    "updateSuccess": "代码片段更新成功",
+    "deleteSuccess": "代码片段删除成功",
+    "createFailed": "创建代码片段失败",
+    "updateFailed": "更新代码片段失败",
+    "deleteFailed": "删除代码片段失败",
+    "failedToFetch": "获取代码片段失败",
+    "executeSuccess": "正在执行: {{name}}"
   },
   "fileManager": {
     "title": "文件管理器",
