Code cleanup. Began working on overhauled homepage.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -195,7 +195,57 @@
     "loggedInTitle": "Logged in!",
     "loggedInMessage": "You are logged in! Use the sidebar to access all available tools. To get started, create an SSH Host in the SSH Manager tab. Once created, you can connect to that host using the other apps in the sidebar.",
     "failedToLoadAlerts": "Failed to load alerts",
-    "failedToDismissAlert": "Failed to dismiss alert"
+    "failedToDismissAlert": "Failed to dismiss alert",
+    "recentActivity": "Recent Activity",
+    "serverOverview": "Server Overview",
+    "activeTunnels": "Active Tunnels",
+    "allTunnels": "All Tunnels",
+    "quickAccess": "Quick Access",
+    "noActiveTunnels": "No active tunnels",
+    "noActiveTunnelsDesc": "Configure SSH tunnels in Host Manager to access remote services locally",
+    "noTunnels": "No tunnels configured",
+    "noTunnelsDesc": "Configure SSH tunnels in Host Manager to access remote services locally",
+    "noRecentConnections": "No recent connections",
+    "noRecentFiles": "No recent files",
+    "noPinnedFiles": "No pinned files",
+    "noServersConfigured": "No servers configured",
+    "noServersConfiguredDesc": "Add servers in Host Manager to monitor their status",
+    "totalServers": "Total Servers",
+    "tunnelHosts": "Total Tunnels",
+    "credentials": "Credentials",
+    "totalUsers": "Total Users",
+    "allServers": "All Servers",
+    "systemStatus": "System Status",
+    "database": "Database",
+    "authentication": "Authentication",
+    "uptime": "Uptime",
+    "version": "Version",
+    "upToDate": "Up to date",
+    "outOfDate": "Out of date",
+    "active": "Active",
+    "inactive": "Inactive",
+    "unknown": "Unknown",
+    "stop": "Stop",
+    "open": "Open",
+    "local": "Local",
+    "remote": "Remote",
+    "autoStartEnabled": "Auto-start enabled",
+    "justNow": "Just now",
+    "minutesAgo": "{{minutes}}m ago",
+    "hoursAgo": "{{hours}}h ago",
+    "daysAgo": "{{days}}d ago",
+    "never": "Never",
+    "terminal": "Terminal",
+    "files": "Files",
+    "tunnels": "Tunnels",
+    "adminSettings": "Admin Settings",
+    "userProfile": "User Profile",
+    "addHost": "Add Host",
+    "addCredential": "Add Credential",
+    "recentUpdates": "Recent Updates",
+    "pinnedHosts": "Pinned Hosts",
+    "noPinnedHosts": "No pinned hosts",
+    "noPinnedHostsDesc": "Pin hosts in Host Manager for quick access"
   },
   "serverConfig": {
     "title": "Server Configuration",
