--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -193,7 +193,57 @@
     "loggedInTitle": "登录成功！",
     "loggedInMessage": "您已登录！使用侧边栏访问所有可用工具。要开始使用，请在 SSH 管理器选项卡中创建 SSH 主机。创建后，您可以使用侧边栏中的其他应用程序连接到该主机。",
     "failedToLoadAlerts": "加载警报失败",
-    "failedToDismissAlert": "关闭警报失败"
+    "failedToDismissAlert": "关闭警报失败",
+    "recentActivity": "最近活动",
+    "serverOverview": "服务器概览",
+    "activeTunnels": "活动隧道",
+    "allTunnels": "所有隧道",
+    "quickAccess": "快速访问",
+    "noActiveTunnels": "没有活动隧道",
+    "noActiveTunnelsDesc": "在主机管理器中配置 SSH 隧道以本地访问远程服务",
+    "noTunnels": "没有配置隧道",
+    "noTunnelsDesc": "在主机管理器中配置 SSH 隧道以本地访问远程服务",
+    "noRecentConnections": "没有最近连接",
+    "noRecentFiles": "没有最近文件",
+    "noPinnedFiles": "没有固定文件",
+    "noServersConfigured": "没有配置服务器",
+    "noServersConfiguredDesc": "在主机管理器中添加服务器以监控其状态",
+    "totalServers": "总服务器数",
+    "tunnelHosts": "总隧道数",
+    "credentials": "凭据",
+    "totalUsers": "总用户数",
+    "allServers": "所有服务器",
+    "systemStatus": "系统状态",
+    "database": "数据库",
+    "authentication": "认证",
+    "uptime": "运行时间",
+    "version": "版本",
+    "upToDate": "已是最新",
+    "outOfDate": "需要更新",
+    "active": "活动",
+    "inactive": "非活动",
+    "unknown": "未知",
+    "stop": "停止",
+    "open": "打开",
+    "local": "本地",
+    "remote": "远程",
+    "autoStartEnabled": "已启用自动启动",
+    "justNow": "刚刚",
+    "minutesAgo": "{{minutes}}分钟前",
+    "hoursAgo": "{{hours}}小时前",
+    "daysAgo": "{{days}}天前",
+    "never": "从未",
+    "terminal": "终端",
+    "files": "文件",
+    "tunnels": "隧道",
+    "adminSettings": "管理员设置",
+    "userProfile": "用户资料",
+    "addHost": "添加主机",
+    "addCredential": "添加凭据",
+    "recentUpdates": "最近更新",
+    "pinnedHosts": "固定主机",
+    "noPinnedHosts": "没有固定主机",
+    "noPinnedHostsDesc": "在主机管理器中固定主机以便快速访问"
   },
   "serverConfig": {
     "title": "服务器配置",
