feat: Add Chinese translations for delete confirmation messages

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -852,8 +852,13 @@
     "selectServerToEdit": "从侧边栏选择服务器以开始编辑文件",
     "fileOperations": "文件操作",
     "confirmDeleteMessage": "确定要删除 <strong>{{name}}</strong> 吗？",
+    "confirmDeleteSingleItem": "确定要永久删除 \"{{name}}\" 吗？",
+    "confirmDeleteMultipleItems": "确定要永久删除 {{count}} 个项目吗？",
+    "confirmDeleteMultipleItemsWithFolders": "确定要永久删除 {{count}} 个项目吗？这包括文件夹及其内容。",
+    "confirmDeleteFolder": "确定要永久删除文件夹 \"{{name}}\" 及其所有内容吗？",
     "deleteDirectoryWarning": "这将删除文件夹及其所有内容。",
     "actionCannotBeUndone": "此操作无法撤销。",
+    "permanentDeleteWarning": "此操作无法撤销。项目将从服务器永久删除。",
     "dragSystemFilesToUpload": "拖拽系统文件到此处上传",
     "dragFilesToWindowToDownload": "拖拽文件到窗口外下载",
     "openTerminalHere": "在此处打开终端",
