Feature request: Add delete confirmation dialog to file manager (#344)
* Feature request: Add delete confirmation dialog to file manager

- Added confirmation dialog before deleting files/folders
- Users must confirm deletion with a warning message
- Works for both Delete key and right-click delete
- Shows different messages for single file, folder, or multiple items
- Includes permanent deletion warning
- Follows existing design patterns using confirmWithToast

* Adds confirmation for deletion of items including folders

Updates the file deletion confirmation logic to distinguish between
deleting multiple items with or without folders. Introduces a new
translation string for a clearer user prompt when folders and their
contents are included in the deletion.

Improves clarity and reduces user error when performing bulk deletions.

* feat: Add Chinese translations for delete confirmation messages

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -844,8 +844,13 @@
     "selectServerToEdit": "Select a server from the sidebar to start editing files",
     "fileOperations": "File Operations",
     "confirmDeleteMessage": "Are you sure you want to delete <strong>{{name}}</strong>?",
+    "confirmDeleteSingleItem": "Are you sure you want to permanently delete \"{{name}}\"?",
+    "confirmDeleteMultipleItems": "Are you sure you want to permanently delete {{count}} items?",
+    "confirmDeleteMultipleItemsWithFolders": "Are you sure you want to permanently delete {{count}} items? This includes folders and their contents.",
+    "confirmDeleteFolder": "Are you sure you want to permanently delete the folder \"{{name}}\" and all its contents?",
     "deleteDirectoryWarning": "This will delete the folder and all its contents.",
     "actionCannotBeUndone": "This action cannot be undone.",
+    "permanentDeleteWarning": "This action cannot be undone. The item(s) will be permanently deleted from the server.",
     "recent": "Recent",
     "pinned": "Pinned",
     "folderShortcuts": "Folder Shortcuts",
