Support empty password for SSH authentication

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -586,6 +586,7 @@
     "tags": "Tags",
     "pin": "Pin",
     "passwordRequired": "Password is required when using password authentication",
+    "passwordHint": "Leave empty for no password or password-less authentication",
     "sshKeyRequired": "SSH Private Key is required when using key authentication",
     "keyTypeRequired": "Key Type is required when using key authentication",
     "mustSelectValidSshConfig": "Must select a valid SSH configuration from the list",
@@ -1265,7 +1266,7 @@
     "username": "username",
     "hostname": "host name",
     "folder": "folder",
-    "password": "password",
+    "password": "password (optional)",
     "keyPassword": "key password",
     "pastePrivateKey": "Paste your private key here...",
     "pastePublicKey": "Paste your public key here...",
