--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -570,6 +570,7 @@
     "folder": "文件夹",
     "tags": "标签",
     "passwordRequired": "使用密码认证时需要密码",
+    "passwordHint": "留空表示无密码或使用无密码认证",
     "sshKeyRequired": "使用密钥认证时需要 SSH 私钥",
     "keyTypeRequired": "使用密钥认证时需要密钥类型",
     "mustSelectValidSshConfig": "必须从列表中选择有效的 SSH 配置",
@@ -1242,7 +1243,7 @@
     "username": "用户名",
     "hostname": "主机名",
     "folder": "文件夹",
-    "password": "密码",
+    "password": "密码（可选）",
     "credentialName": "我的SSH服务器",
     "description": "SSH凭据描述",
     "searchCredentials": "按名称、用户名或标签搜索凭据...",
