Add terminal snippets feature with sidebar UI
- Add snippets CRUD API endpoints and database schema
- Implement snippets sidebar accessible from TopNavbar
- Add copy to clipboard functionality
- Include tooltips and optimized styling
- Add English and Chinese translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -191,6 +191,40 @@
     "enableRightClickCopyPaste": "Enable right‑click copy/paste",
     "shareIdeas": "Have ideas for what should come next for ssh tools? Share them on"
   },
+  "snippets": {
+    "title": "Snippets",
+    "new": "New Snippet",
+    "create": "Create Snippet",
+    "edit": "Edit Snippet",
+    "run": "Run",
+    "empty": "No snippets yet",
+    "emptyHint": "Create a snippet to save commonly used commands",
+    "name": "Name",
+    "description": "Description",
+    "content": "Command",
+    "namePlaceholder": "e.g., Restart Nginx",
+    "descriptionPlaceholder": "Optional description",
+    "contentPlaceholder": "e.g., sudo systemctl restart nginx",
+    "nameRequired": "Name is required",
+    "contentRequired": "Command is required",
+    "createDescription": "Create a new command snippet for quick execution",
+    "editDescription": "Edit this command snippet",
+    "deleteConfirmTitle": "Delete Snippet",
+    "deleteConfirmDescription": "Are you sure you want to delete \"{{name}}\"?",
+    "createSuccess": "Snippet created successfully",
+    "updateSuccess": "Snippet updated successfully",
+    "deleteSuccess": "Snippet deleted successfully",
+    "createFailed": "Failed to create snippet",
+    "updateFailed": "Failed to update snippet",
+    "deleteFailed": "Failed to delete snippet",
+    "failedToFetch": "Failed to fetch snippets",
+    "executeSuccess": "Executing: {{name}}",
+    "copySuccess": "Copied \"{{name}}\" to clipboard",
+    "runTooltip": "Execute this snippet in the terminal",
+    "copyTooltip": "Copy snippet to clipboard",
+    "editTooltip": "Edit this snippet",
+    "deleteTooltip": "Delete this snippet"
+  },
   "homepage": {
     "loggedInTitle": "Logged in!",
     "loggedInMessage": "You are logged in! Use the sidebar to access all available tools. To get started, create an SSH Host in the SSH Manager tab. Once created, you can connect to that host using the other apps in the sidebar.",
@@ -356,6 +390,7 @@
     "admin": "Admin",
     "userProfile": "User Profile",
     "tools": "Tools",
+    "snippets": "Snippets",
     "newTab": "New Tab",
     "splitScreen": "Split Screen",
     "closeTab": "Close Tab",
