--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -189,6 +189,40 @@
     "enableRightClickCopyPaste": "启用右键复制/粘贴",
     "shareIdeas": "对 SSH 工具有什么想法？在此分享"
   },
+  "snippets": {
+    "title": "代码片段",
+    "new": "新建片段",
+    "create": "创建代码片段",
+    "edit": "编辑代码片段",
+    "run": "运行",
+    "empty": "暂无代码片段",
+    "emptyHint": "创建代码片段以保存常用命令",
+    "name": "名称",
+    "description": "描述",
+    "content": "命令",
+    "namePlaceholder": "例如: 重启 Nginx",
+    "descriptionPlaceholder": "可选描述",
+    "contentPlaceholder": "例如: sudo systemctl restart nginx",
+    "nameRequired": "名称不能为空",
+    "contentRequired": "命令不能为空",
+    "createDescription": "创建新的命令片段以便快速执行",
+    "editDescription": "编辑此命令片段",
+    "deleteConfirmTitle": "删除代码片段",
+    "deleteConfirmDescription": "确定要删除 \"{{name}}\" 吗？",
+    "createSuccess": "代码片段创建成功",
+    "updateSuccess": "代码片段更新成功",
+    "deleteSuccess": "代码片段删除成功",
+    "createFailed": "创建代码片段失败",
+    "updateFailed": "更新代码片段失败",
+    "deleteFailed": "删除代码片段失败",
+    "failedToFetch": "获取代码片段失败",
+    "executeSuccess": "正在执行: {{name}}",
+    "copySuccess": "已复制 \"{{name}}\" 到剪贴板",
+    "runTooltip": "在终端中执行此片段",
+    "copyTooltip": "复制片段到剪贴板",
+    "editTooltip": "编辑此片段",
+    "deleteTooltip": "删除此片段"
+  },
   "homepage": {
     "loggedInTitle": "登录成功！",
     "loggedInMessage": "您已登录！使用侧边栏访问所有可用工具。要开始使用，请在 SSH 管理器选项卡中创建 SSH 主机。创建后，您可以使用侧边栏中的其他应用程序连接到该主机。",
@@ -342,6 +376,7 @@
     "admin": "管理员",
     "userProfile": "用户资料",
     "tools": "工具",
+    "snippets": "代码片段",
     "newTab": "新标签页",
     "splitScreen": "分屏",
     "closeTab": "关闭标签页",
