--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -129,13 +129,13 @@
         "usageStatistics": "Nutzungsstatistiken",
         "copiedToClipboard": "{{field}} in die Zwischenablage kopiert",
         "failedToCopy": "Kopieren in die Zwischenablage fehlgeschlagen",
-        "sshKey": "",
+        "sshKey": "SSH-Schlüssel",
         "createCredentialDescription": "Erstellen Sie neue SSH-Anmeldeinformationen für den sicheren Zugriff",
-        "editCredentialDescription": "",
-        "listView": "",
-        "folderView": "",
-        "unknownCredential": "",
-        "confirmRemoveFromFolder": "",
+        "editCredentialDescription": "Aktualisieren Sie die Anmeldeinformationen",
+        "listView": "Liste",
+        "folderView": "Ordner",
+        "unknownCredential": "Unbekannt",
+        "confirmRemoveFromFolder": "Sind Sie sicher, dass Sie \"{{name}}\" aus Ordner \"{{folder}}\"? Die Zugangsdaten werden in den Bereich \"Nicht kategorisiert\" verschoben.",
         "removedFromFolder": "",
         "failedToRemoveFromFolder": "",
         "folderRenamed": "",
@@ -874,12 +874,12 @@
         "pasteFailed": "",
         "noUndoableActions": "",
         "undoCopySuccess": "",
-        "undoCopyFailedDelete": "",
+        "undoCopyFailedDelete": "Rückgängig machen fehlgeschlagen: Es konnten keine kopierten Dateien gelöscht werden",
         "undoCopyFailedNoInfo": "",
         "undoMoveSuccess": "",
         "undoMoveFailedMove": "",
         "undoMoveFailedNoInfo": "",
-        "undoDeleteNotSupported": "",
+        "undoDeleteNotSupported": "Der Löschvorgang kann nicht rückgängig gemacht werden: Die Dateien wurden dauerhaft vom Server gelöscht.",
         "undoTypeNotSupported": "",
         "undoOperationFailed": "",
         "unknownError": "",
@@ -938,10 +938,10 @@
         "operationCompletedSuccessfully": "",
         "operationCompleted": "",
         "downloadFileSuccess": "",
-        "downloadFileFailed": "",
+        "downloadFileFailed": "Download fehlgeschlagen",
         "moveTo": "",
         "diffCompareWith": "",
-        "dragOutsideToDownload": "",
+        "dragOutsideToDownload": "Zum Herunterladen aus dem Fenster ziehen ( {{count}} Dateien)",
         "newFolderDefault": "",
         "newFileDefault": "",
         "successfullyMovedItems": "{{count}} Elemente erfolgreich nach {{target}} verschoben",
@@ -966,23 +966,23 @@
         "connected": "",
         "disconnected": "",
         "connecting": "",
-        "disconnecting": "",
+        "disconnecting": "Verbindung wird getrennt...",
         "unknownTunnelStatus": "",
         "unknown": "",
         "error": "",
-        "failed": "",
-        "retrying": "",
-        "waiting": "",
-        "waitingForRetry": "",
-        "retryingConnection": "",
-        "canceling": "",
-        "connect": "",
-        "disconnect": "",
-        "cancel": "",
-        "port": "",
-        "attempt": "",
-        "nextRetryIn": "",
-        "checkDockerLogs": "",
+        "failed": "Fehlgeschlagen",
+        "retrying": "Erneuter Versuch",
+        "waiting": "Warten",
+        "waitingForRetry": "Warten auf erneuten Versuch",
+        "retryingConnection": "Erneuter Verbindungsversuch",
+        "canceling": "Abbrechen...",
+        "connect": "Verbinden",
+        "disconnect": "Trennen",
+        "cancel": "Abbrechen",
+        "port": "Port",
+        "attempt": "Versuch {{current}} von {{max}}",
+        "nextRetryIn": "Nächster Wiederholungsversuch in {{seconds}} Sekunden",
+        "checkDockerLogs": "Überprüfen Sie Ihre Docker-Protokolle auf den Fehlergrund, treten Sie dem",
         "noTunnelConnections": "",
         "tunnelConnections": "",
         "addTunnel": "",
@@ -1039,7 +1039,7 @@
         "rootStorageSpace": "",
         "of": "",
         "feedbackMessage": "Haben Sie Ideen für die nächsten Schritte im Bereich der Serververwaltung? Teilen Sie diese mit uns",
-        "failedToFetchHostConfig": "",
+        "failedToFetchHostConfig": "Abrufen der Hostkonfiguration fehlgeschlagen",
         "failedToFetchStatus": "",
         "failedToFetchMetrics": "",
         "failedToFetchHomeData": "",
@@ -1165,7 +1165,7 @@
         "sessionExpired": "Sitzung abgelaufen - bitte melden Sie sich erneut an"
     },
     "messages": {
-        "saveSuccess": "",
+        "saveSuccess": "Erfolgreich gespeichert",
         "saveError": "",
         "deleteSuccess": "",
         "deleteError": "",
@@ -1180,27 +1180,27 @@
         "processing": "",
         "pleaseWait": "",
         "registrationDisabled": "Die Registrierung neuer Konten ist derzeit durch einen Administrator deaktiviert. Bitte melden Sie sich an oder wenden Sie sich an einen Administrator.",
-        "databaseConnected": "",
+        "databaseConnected": "Datenbank erfolgreich verbunden",
         "databaseConnectionFailed": "Verbindung zum Datenbankserver konnte nicht hergestellt werden",
         "checkServerConnection": "Bitte überprüfen Sie Ihre Serververbindung und versuchen Sie es erneut",
-        "resetCodeSent": "",
-        "codeVerified": "",
+        "resetCodeSent": "Reset-Code wurde an Docker-Protokolle gesendet",
+        "codeVerified": "Code erfolgreich verifiziert",
         "passwordResetSuccess": "Passwort erfolgreich zurückgesetzt",
-        "loginSuccess": "",
-        "registrationSuccess": ""
+        "loginSuccess": "Anmeldung erfolgreich",
+        "registrationSuccess": "Registrierung erfolgreich"
     },
     "profile": {
-        "title": "",
+        "title": "Benutzerprofil",
         "description": "Verwalten Sie Ihre Kontoeinstellungen und Sicherheit",
-        "security": "",
-        "changePassword": "",
-        "twoFactorAuth": "",
-        "accountInfo": "",
-        "role": "",
-        "admin": "",
-        "user": "",
+        "security": "Sicherheit",
+        "changePassword": "Kennwort ändern",
+        "twoFactorAuth": "Zwei-Faktor-Authentifizierung",
+        "accountInfo": "Kontoinformationen",
+        "role": "Rolle",
+        "admin": "Administrator",
+        "user": "Benutzer",
         "authMethod": "Authentifizierungsmethode",
-        "local": "",
+        "local": "Lokal",
         "external": "Extern (OIDC)",
         "selectPreferredLanguage": "Wählen Sie Ihre bevorzugte Sprache für die Benutzeroberfläche"
     },
@@ -1208,17 +1208,17 @@
         "failedToLoadVersionInfo": "Fehler beim Laden der Versionsinformationen"
     },
     "placeholders": {
-        "enterCode": "",
-        "ipAddress": "",
-        "port": "",
-        "maxRetries": "",
-        "retryInterval": "",
-        "language": "",
-        "username": "",
-        "hostname": "",
-        "folder": "",
-        "password": "",
-        "keyPassword": "",
+        "enterCode": "000000",
+        "ipAddress": "127.0.0.1",
+        "port": "22",
+        "maxRetries": "3",
+        "retryInterval": "10",
+        "language": "Sprache",
+        "username": "Benutzername",
+        "hostname": "Hostname",
+        "folder": "Ordner",
+        "password": "Passwort",
+        "keyPassword": "Schlüsselkennwort",
         "pastePrivateKey": "Fügen Sie hier Ihren privaten Schlüssel ein ...",
         "pastePublicKey": "Fügen Sie hier Ihren öffentlichen Schlüssel ein ...",
         "credentialName": "Mein SSH-Server",
@@ -1237,20 +1237,20 @@
         "userinfoUrl": "https:\/\/ihr-anbieter.com\/application\/o\/userinfo\/",
         "enterUsername": "Geben Sie den Benutzernamen ein, um zum Administrator zu werden",
         "searchHosts": "Suchen Sie nach Hosts nach Name, Benutzername, IP, Ordner, Tags usw.",
-        "enterPassword": "",
+        "enterPassword": "Geben Sie Ihr Passwort ein",
         "totpCode": "6-stelliger TOTP-Code",
         "searchHostsAny": "Suchen Sie nach Hosts anhand beliebiger Informationen ...",
         "confirmPassword": "Geben Sie zur Bestätigung Ihr Passwort ein",
         "typeHere": "Hier eingeben",
         "fileName": "Geben Sie den Dateinamen ein (z. B. Beispiel.txt)",
-        "folderName": "",
+        "folderName": "Ordnernamen eingeben",
         "fullPath": "Geben Sie den vollständigen Pfad zum Element ein",
         "currentPath": "Geben Sie den aktuellen Pfad zum Element ein",
-        "newName": ""
+        "newName": "Neuen Namen eingeben"
     },
     "leftSidebar": {
-        "failedToLoadHosts": "",
-        "noFolder": "",
+        "failedToLoadHosts": "Hosts konnten nicht geladen werden",
+        "noFolder": "Kein Ordner",
         "passwordRequired": "Passwort erforderlich",
         "failedToDeleteAccount": "Konto konnte nicht gelöscht werden",
         "failedToMakeUserAdmin": "Fehler beim Festlegen des Benutzers als Administrator",
