--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -286,6 +286,7 @@
     "sshTools": "SSH Tools",
     "english": "English",
     "chinese": "Chinese",
+    "german": "German",
     "cancel": "Cancel",
     "username": "Username",
     "name": "Name",
