--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -280,6 +280,7 @@
     "sshTools": "SSH 工具",
     "english": "英语",
     "chinese": "中文",
+    "german": "德语",
     "cancel": "取消",
     "username": "用户名",
     "name": "名称",
