feat: add draggable server stats dashboard with customizable widgets

--- a/src/locales/zh/translation.json
+++ b/src/locales/zh/translation.json
@@ -728,6 +728,24 @@
     "terminal": "终端",
     "tunnel": "隧道",
     "fileManager": "文件管理器",
+    "serverStats": "服务器统计",
+    "hostViewer": "主机查看器",
+    "enableServerStats": "启用服务器统计",
+    "enableServerStatsDesc": "启用/禁用此主机的服务器统计信息收集",
+    "displayItems": "显示项目",
+    "displayItemsDesc": "选择在服务器统计页面上显示哪些指标",
+    "enableCpu": "CPU使用率",
+    "enableMemory": "内存使用率",
+    "enableDisk": "磁盘使用率",
+    "enableNetwork": "网络统计（即将推出）",
+    "enableProcesses": "进程数（即将推出）",
+    "enableUptime": "运行时间（即将推出）",
+    "enableHostname": "主机名（即将推出）",
+    "enableOs": "操作系统（即将推出）",
+    "customCommands": "自定义命令（即将推出）",
+    "customCommandsDesc": "为此服务器定义自定义关机和重启命令",
+    "shutdownCommand": "关机命令",
+    "rebootCommand": "重启命令",
     "confirmRemoveFromFolder": "确定要将\"{{name}}\"从文件夹\"{{folder}}\"中移除吗？主机将被移动到\"无文件夹\"。",
     "removedFromFolder": "主机\"{{name}}\"已成功从文件夹中移除",
     "failedToRemoveFromFolder": "从文件夹中移除主机失败",
@@ -1118,7 +1136,15 @@
     "cannotFetchMetrics": "无法从离线服务器获取指标",
     "totpRequired": "需要 TOTP 认证",
     "totpUnavailable": "启用了 TOTP 的服务器无法使用服务器统计功能",
-    "load": "负载"
+    "load": "负载",
+    "free": "空闲",
+    "available": "可用",
+    "editLayout": "编辑布局",
+    "cancelEdit": "取消",
+    "saveLayout": "保存布局",
+    "unsavedChanges": "有未保存的更改",
+    "layoutSaved": "布局保存成功",
+    "failedToSaveLayout": "保存布局失败"
   },
   "auth": {
     "loginTitle": "登录 Termix",
