--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -706,7 +706,24 @@
     "terminal": "Terminal",
     "tunnel": "Tunnel",
     "fileManager": "File Manager",
+    "serverStats": "Server Stats",
     "hostViewer": "Host Viewer",
+    "enableServerStats": "Enable Server Stats",
+    "enableServerStatsDesc": "Enable/disable server statistics collection for this host",
+    "displayItems": "Display Items",
+    "displayItemsDesc": "Choose which metrics to display on the server stats page",
+    "enableCpu": "CPU Usage",
+    "enableMemory": "Memory Usage",
+    "enableDisk": "Disk Usage",
+    "enableNetwork": "Network Statistics (Coming Soon)",
+    "enableProcesses": "Process Count (Coming Soon)",
+    "enableUptime": "Uptime (Coming Soon)",
+    "enableHostname": "Hostname (Coming Soon)",
+    "enableOs": "Operating System (Coming Soon)",
+    "customCommands": "Custom Commands (Coming Soon)",
+    "customCommandsDesc": "Define custom shutdown and reboot commands for this server",
+    "shutdownCommand": "Shutdown Command",
+    "rebootCommand": "Reboot Command",
     "confirmRemoveFromFolder": "Are you sure you want to remove \"{{name}}\" from folder \"{{folder}}\"? The host will be moved to \"No Folder\".",
     "removedFromFolder": "Host \"{{name}}\" removed from folder successfully",
     "failedToRemoveFromFolder": "Failed to remove host from folder",
@@ -1141,7 +1158,13 @@
     "totpUnavailable": "Server Stats unavailable for TOTP-enabled servers",
     "load": "Load",
     "free": "Free",
-    "available": "Available"
+    "available": "Available",
+    "editLayout": "Edit Layout",
+    "cancelEdit": "Cancel",
+    "saveLayout": "Save Layout",
+    "unsavedChanges": "Unsaved changes",
+    "layoutSaved": "Layout saved successfully",
+    "failedToSaveLayout": "Failed to save layout"
   },
   "auth": {
     "loginTitle": "Login to Termix",
